# PhoneBarcodeScanner

./: CMakeLists.txt  README.md  client_ssl.md  phoneBarcodeScanner.cpp
assets/: app.rc
include/: CommandHandler.h  InputEmulator.h  Logger.h  NetworkUtils.h  QRCodeRenderer.h  Resource.h  SSLCertManager.h  SettingsDialog.h  SettingsManager.h  StringUtils.h  WSErrors.h  WSIOThread.cpp  WSIOThread.h  WSInclude.h  WSServerThread.cpp  WSServerThread.h  version.h
qrencode/: qrencode_x64.lib  qrencode_x86.lib  qrencoded_x64.lib  qrencoded_x86.lib
src/: CommandHandler.cpp  Logger.cpp  QRCodeRenderer.cpp  SSLCertManager.cpp  SettingsDialog.cpp  WSIOThread.cpp  WSServerThread.cpp
templates/: version.h.in
